apps/pve/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pve-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: 10.0.0.120:8006
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pve.realtong.cn
  rules:
    - host: pve.realtong.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pve
                port:
                  number: 8006
